fixed modal not covering the entire screen

--- a/src/components/Modal1.css
+++ b/src/components/Modal1.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
+  margin-top: -15vw;
   background-color: rgb(231, 227, 227);
   opacity: 0.95;
   position: fixed;
